--- a/antlr4-maven-archetype/pom.xml
+++ b/antlr4-maven-archetype/pom.xml
@@ -14,6 +14,14 @@
         <version>4.2.3-SNAPSHOT</version>
     </parent>
     
+<!--    <dependencies>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.2.3-SNAPSHOT</version>
+        </dependency>
+    </dependencies>-->
+    
     <build>
         
         <extensions>
